# Xtend

./: .env.example  .gitignore  .pylintrc  README.md  config.py  index.md  pyproject.toml  requirements.txt  run.py  run.sh  setup.py  test.py
.github/: CODEOWNERS  Dockerfile
.github/workflows/: ci-cd-pipeline.yml  release.yml
app/: __init__.py  capture.py  notes.txt  qt_xtend.py  routes.py  server.py  utils.py  views.py
app/templates/: index copy.html  index.html  stream.html
app_capturer/: Cargo.toml
app_capturer/app_capturer/: Cargo.toml
app_capturer/app_capturer/src/: lib.rs  linux_x11.rs
app_capturer/app_lib/: Cargo.toml
app_capturer/app_test/: Cargo.toml
app_capturer/app_test/src/: main.rs
app_capturer/src/: main.rs
docs/: architecture.md  release.txt
packaging/: windows-installer.iss
src/xtend/: __init__.py  app.py  capture.py  cli.py  config.py  gui.py  rs_capture.py  rust_capturer.py  utils.py  views.py
src/xtend/resources/: xtend.desktop
src/xtend/static/assets/css/: style.css
src/xtend/static/assets/js/: base.js  index.js
src/xtend/templates/: about.html  base.html  index.html  session_expired.html  sessions.html  stream.html
tests/: test_views.py
windows/: xtend.nsi  xtend.wxs
